--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -1563,7 +1563,7 @@ QPushButton:pressed {
 color: rgb(85, 170, 255);</string>
                   </property>
                   <property name="currentIndex">
-                   <number>0</number>
+                   <number>1</number>
                   </property>
                   <widget class="QWidget" name="page_home">
                    <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -1732,11 +1732,20 @@ border-radius: 5px;</string>
                           </item>
                           <item>
                            <widget class="QTableWidget" name="userTableWidget">
+                            <property name="enabled">
+                             <bool>true</bool>
+                            </property>
                             <property name="sizePolicy">
-                             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                               <horstretch>0</horstretch>
                               <verstretch>0</verstretch>
                              </sizepolicy>
+                            </property>
+                            <property name="maximumSize">
+                             <size>
+                              <width>99999</width>
+                              <height>200</height>
+                             </size>
                             </property>
                             <property name="palette">
                              <palette>
@@ -1997,10 +2006,19 @@ QHeaderView::section:vertical
                              <enum>QFrame::NoFrame</enum>
                             </property>
                             <property name="verticalScrollBarPolicy">
-                             <enum>Qt::ScrollBarAlwaysOn</enum>
+                             <enum>Qt::ScrollBarAsNeeded</enum>
+                            </property>
+                            <property name="horizontalScrollBarPolicy">
+                             <enum>Qt::ScrollBarAsNeeded</enum>
                             </property>
                             <property name="sizeAdjustPolicy">
                              <enum>QAbstractScrollArea::AdjustToContents</enum>
+                            </property>
+                            <property name="autoScroll">
+                             <bool>true</bool>
+                            </property>
+                            <property name="autoScrollMargin">
+                             <number>16</number>
                             </property>
                             <property name="editTriggers">
                              <set>QAbstractItemView::NoEditTriggers</set>
@@ -2014,6 +2032,9 @@ QHeaderView::section:vertical
                             <property name="selectionBehavior">
                              <enum>QAbstractItemView::SelectRows</enum>
                             </property>
+                            <property name="verticalScrollMode">
+                             <enum>QAbstractItemView::ScrollPerPixel</enum>
+                            </property>
                             <property name="showGrid">
                              <bool>true</bool>
                             </property>
@@ -2023,11 +2044,17 @@ QHeaderView::section:vertical
                             <property name="sortingEnabled">
                              <bool>false</bool>
                             </property>
+                            <property name="wordWrap">
+                             <bool>true</bool>
+                            </property>
+                            <property name="rowCount">
+                             <number>0</number>
+                            </property>
                             <attribute name="horizontalHeaderVisible">
                              <bool>false</bool>
                             </attribute>
                             <attribute name="horizontalHeaderCascadingSectionResizes">
-                             <bool>true</bool>
+                             <bool>false</bool>
                             </attribute>
                             <attribute name="horizontalHeaderDefaultSectionSize">
                              <number>200</number>
@@ -2041,133 +2068,35 @@ QHeaderView::section:vertical
                             <attribute name="verticalHeaderCascadingSectionResizes">
                              <bool>false</bool>
                             </attribute>
+                            <attribute name="verticalHeaderMinimumSectionSize">
+                             <number>30</number>
+                            </attribute>
+                            <attribute name="verticalHeaderDefaultSectionSize">
+                             <number>30</number>
+                            </attribute>
                             <attribute name="verticalHeaderHighlightSections">
                              <bool>false</bool>
                             </attribute>
                             <attribute name="verticalHeaderStretchLastSection">
-                             <bool>true</bool>
+                             <bool>false</bool>
                             </attribute>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                             <property name="font">
-                              <font>
-                               <family>Segoe UI</family>
-                              </font>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <row>
-                             <property name="text">
-                              <string>New Row</string>
-                             </property>
-                            </row>
-                            <column>
-                             <property name="text">
-                              <string>0</string>
-                             </property>
-                            </column>
-                            <column>
-                             <property name="text">
-                              <string>1</string>
-                             </property>
-                            </column>
-                            <column>
-                             <property name="text">
-                              <string>2</string>
-                             </property>
-                            </column>
-                            <item row="0" column="0">
-                             <property name="text">
-                              <string>Nombre de Usuario</string>
-                             </property>
-                            </item>
-                            <item row="0" column="1">
-                             <property name="text">
-                              <string>Email</string>
-                             </property>
-                            </item>
-                            <item row="0" column="2">
-                             <property name="text">
-                              <string>Fecha de Creación</string>
-                             </property>
-                            </item>
-                            <item row="1" column="2">
-                             <property name="text">
-                              <string/>
-                             </property>
-                            </item>
                            </widget>
+                          </item>
+                          <item>
+                           <spacer name="verticalSpacer">
+                            <property name="orientation">
+                             <enum>Qt::Vertical</enum>
+                            </property>
+                            <property name="sizeType">
+                             <enum>QSizePolicy::Expanding</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                             <size>
+                              <width>20</width>
+                              <height>193</height>
+                             </size>
+                            </property>
+                           </spacer>
                           </item>
                          </layout>
                         </widget>
@@ -2256,6 +2185,9 @@ QPushButton:pressed {
                           </item>
                           <item>
                            <widget class="QPushButton" name="eliminateBtn">
+                            <property name="enabled">
+                             <bool>false</bool>
+                            </property>
                             <property name="minimumSize">
                              <size>
                               <width>80</width>
