--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -2186,7 +2186,7 @@ QPushButton:pressed {
                           <item>
                            <widget class="QPushButton" name="eliminateBtn">
                             <property name="enabled">
-                             <bool>false</bool>
+                             <bool>true</bool>
                             </property>
                             <property name="minimumSize">
                              <size>
