--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -1257,10 +1257,16 @@ QPushButton:pressed {
                 </property>
                 <item>
                  <widget class="QLabel" name="label_top_info_1">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>20</height>
+                   </size>
+                  </property>
                   <property name="maximumSize">
                    <size>
                     <width>16777215</width>
-                    <height>15</height>
+                    <height>20</height>
                    </size>
                   </property>
                   <property name="font">
@@ -1273,6 +1279,9 @@ QPushButton:pressed {
                   </property>
                   <property name="text">
                    <string/>
+                  </property>
+                  <property name="wordWrap">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
@@ -2315,8 +2324,29 @@ border-radius: 5px;
                              <enum>QFrame::Raised</enum>
                             </property>
                             <layout class="QVBoxLayout" name="verticalLayout_8">
+                             <property name="spacing">
+                              <number>0</number>
+                             </property>
+                             <property name="topMargin">
+                              <number>0</number>
+                             </property>
+                             <property name="bottomMargin">
+                              <number>0</number>
+                             </property>
                              <item>
                               <widget class="QLabel" name="labelBoxHeaderSettings">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>0</width>
+                                 <height>20</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>16777215</width>
+                                 <height>25</height>
+                                </size>
+                               </property>
                                <property name="font">
                                 <font>
                                  <family>Segoe UI</family>
@@ -2330,6 +2360,9 @@ border-radius: 5px;
                                </property>
                                <property name="text">
                                 <string>Header Text</string>
+                               </property>
+                               <property name="wordWrap">
+                                <bool>true</bool>
                                </property>
                               </widget>
                              </item>
@@ -2552,8 +2585,8 @@ QScrollBar:horizontal {
                              <rect>
                               <x>0</x>
                               <y>0</y>
-                              <width>278</width>
-                              <height>222</height>
+                              <width>277</width>
+                              <height>224</height>
                              </rect>
                             </property>
                             <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -3199,6 +3232,18 @@ QHeaderView::section:vertical
                        <enum>QFrame::Raised</enum>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_14">
+                       <property name="leftMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="topMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="rightMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="bottomMargin">
+                        <number>0</number>
+                       </property>
                        <item>
                         <widget class="QFrame" name="frame_network_1">
                          <property name="styleSheet">
