updated console for connection info

--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -3541,6 +3541,9 @@ QPushButton:pressed {
                  <height>100</height>
                 </size>
                </property>
+               <property name="styleSheet">
+                <string notr="true">color: rgb(85, 170, 255);</string>
+               </property>
                <property name="frameShape">
                 <enum>QFrame::StyledPanel</enum>
                </property>
