--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -3580,6 +3580,11 @@ QPushButton:pressed {
                     <height>0</height>
                    </size>
                   </property>
+                  <property name="font">
+                   <font>
+                    <pointsize>10</pointsize>
+                   </font>
+                  </property>
                   <property name="styleSheet">
                    <string notr="true">QPlainTextEdit {
 	background-color: rgb(27, 29, 35);
