updated main and ui login

--- a/visuals/ui_login.ui
+++ b/visuals/ui_login.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>359</width>
-    <height>303</height>
+    <width>350</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>300</width>
-    <height>250</height>
+    <width>350</width>
+    <height>300</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>400</width>
+    <height>350</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -240,7 +246,7 @@ QSlider::handle:vertical:pressed {
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <widget class="QFrame" name="inputs_frame">
         <property name="minimumSize">
@@ -258,6 +264,11 @@ QSlider::handle:vertical:pressed {
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QLabel" name="label_user">
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="text">
             <string>Usuario</string>
            </property>
@@ -265,6 +276,23 @@ QSlider::handle:vertical:pressed {
          </item>
          <item>
           <widget class="QLineEdit" name="user_lineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">QLineEdit {
 	background-color: rgb(27, 29, 35);
@@ -283,6 +311,11 @@ QLineEdit:focus {
          </item>
          <item>
           <widget class="QLabel" name="label_password">
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="text">
             <string>Contraseña</string>
            </property>
@@ -290,6 +323,23 @@ QLineEdit:focus {
          </item>
          <item>
           <widget class="QLineEdit" name="password_lineEdit">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">QLineEdit {
 	background-color: rgb(27, 29, 35);
@@ -311,6 +361,19 @@ QLineEdit:focus {
          </item>
         </layout>
        </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>33</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <widget class="QFrame" name="buttons_frame">
@@ -336,6 +399,23 @@ QLineEdit:focus {
          </item>
          <item>
           <widget class="QPushButton" name="accept_button">
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">QPushButton {
 	border: 2px solid rgb(52, 59, 72);
@@ -358,6 +438,23 @@ QPushButton:pressed {
          </item>
          <item>
           <widget class="QPushButton" name="cancel_button">
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">QPushButton {
 	border: 2px solid rgb(52, 59, 72);
